[tool.poetry]
name = "ev-flow"
version = "0.1.0"
description = ""
authors = ["Stefan <smig88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
